TestCases/LLVMTests/SyntaxErrorTests/tests/test33.c
return 1;   // return outside of function is not allowed

int main() {
    return 0;
}
